# Orange-FRP

./: .gitignore  README.md  install-server.sh
Update/: frps
server-package/: Cargo.toml  README.md  install.sh  update.json
server-package/crates/frp-game-common/: Cargo.toml
server-package/crates/frp-game-common/src/: crypto.rs  lib.rs  model.rs
server-package/crates/frp-game-server/: Cargo.toml
server-package/crates/frp-game-server/src/: app.rs  controller.rs  main.rs  storage.rs
