[workspace]
members = [
    "crates/frp-game-common",
    "crates/frp-game-server",
]
default-members = [
    "crates/frp-game-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "2.0.0"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
hkdf = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rpassword = "7"
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
url = "2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
