[package]
name = "frp-game-common"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
hkdf.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
