[package]
name = "frp-game-server"
edition.workspace = true
license.workspace = true
version = "1.1.4"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
frp-game-common = { path = "../frp-game-common" }
rand.workspace = true
reqwest.workspace = true
rpassword.workspace = true
rusqlite.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
